--- a/pc/package.json
+++ b/pc/package.json
@@ -32,8 +32,7 @@
     "@arco-design/web-vue": "^2.44.7",
     "@vueuse/core": "^9.3.0",
     "axios": "^0.24.0",
-    "dayjs": "^1.11.5",
-    "echarts": "^5.4.0",
+    "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
     "mitt": "^3.0.0",
     "nprogress": "^0.2.0",
@@ -41,10 +40,9 @@
     "query-string": "^8.0.3",
     "sortablejs": "^1.15.0",
     "uninstall": "^0.0.0",
-    "vue": "^3.2.40",
-    "vue-echarts": "^6.2.3",
+    "vue": "^3.4.0",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@arco-plugins/vite-vue": "^1.4.5",
@@ -66,14 +64,14 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.1",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-vue": "^9.6.0",
     "less": "^4.1.3",
     "lint-staged": "^13.0.3",
     "mockjs": "^1.1.0",
     "postcss-html": "^1.5.0",
-    "prettier": "^2.7.1",
-    "rollup": "^3.9.1",
+    "prettier": "^3.2.5",
+    "rollup": "^4.17.2",
     "rollup-plugin-visualizer": "^5.8.2",
     "stylelint": "^14.13.0",
     "stylelint-config-prettier": "^9.0.3",
@@ -81,21 +79,21 @@
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard": "^29.0.0",
     "stylelint-order": "^5.0.0",
-    "typescript": "^4.8.4",
+    "typescript": "^5.4.5",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^3.2.5",
+    "vite": "^5.2.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-imagemin": "^0.6.1",
-    "vite-svg-loader": "^3.6.0",
-    "vue-tsc": "^1.0.14"
+    "vite-svg-loader": "^5.1.0",
+    "vue-tsc": "^2.0.19"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   },
   "resolutions": {
     "bin-wrapper": "npm:bin-wrapper-china",
-    "rollup": "^2.56.3",
+    "rollup": "^4.17.2",
     "gifsicle": "5.2.0"
   }
 }
