--- a/aigc/manifest.json
+++ b/aigc/manifest.json
@@ -50,7 +50,7 @@
     /* 快应用特有相关 */
     "mp-weixin" : {
         /* 小程序特有相关 */
-        "appid" : "wx173c60a2bb05ef8b",
+        "appid" : "wx5146faf782787fb5",
         "setting" : {
             "urlCheck" : false
         },
