--- a/pc/package.json
+++ b/pc/package.json
@@ -40,6 +40,7 @@
     "query-string": "^8.0.3",
     "sortablejs": "^1.15.0",
     "uninstall": "^0.0.0",
+    "uuid": "^9.0.1",
     "vue": "^3.4.0",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.3.2"
@@ -52,6 +53,7 @@
     "@types/mockjs": "^1.0.7",
     "@types/nprogress": "^0.2.0",
     "@types/sortablejs": "^1.15.0",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "@vitejs/plugin-vue": "^3.1.2",
