--- a/pc/tsconfig.json
+++ b/pc/tsconfig.json
@@ -15,6 +15,6 @@
     "lib": ["es2020", "dom"],
     "skipLibCheck": true
   },
-  "include": ["src/**/*", "src/**/*.vue"],
+  "include": ["src/**/*", "src/**/*.vue", "components.d.ts"],
   "exclude": ["node_modules"]
 }
